--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ body {
     font: 1rem/1.3 "Roboto", sans-serif;
     background: #0a1f44;
     background-image: url('https://images.unsplash.com/photo-1520114878144-6123749968dd?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MnwxfDB8MXxyYW5kb218MHx8cGFyb2JlLWNpdHl8fHx8fHwxNjUxOTU1MjEx&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1600');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-size: cover;
+    overflow: auto;
     color: #1e2432;
     padding: 70px;
 }
