--- a/css/style.css
+++ b/css/style.css
@@ -231,3 +231,9 @@ body {
     width: 100%;
     padding: 10px;
 }
+
+@media screen and (max-width: 1300px){
+    body{
+        min-height: 100vh;
+    }
+}
