--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,23 @@
     font-weight: normal;
 }
 
+body{
+    overflow: overlay;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(90, 90, 90);
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.2);
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -107,7 +124,9 @@ body {
     bottom: -40px;
     left: 0;
     max-width: 450px;
-    min-height: 40px;
+    min-height: 0;
+    background-color: rgba(0, 0, 0, 0.712);
+    color: #fff;
 }
 
 .ajax-section {
